A few steps towards beeing able to run our application as module: * Explicitely added main class. This avoids letting sprin boot search a main class itself which let to an asm problem. See https://github.com/spring-projects/spring-boot/issues/10647 * Added CLI args --add-modules java.xml.bind in spring-boot:run plugin Now failing with java.io.IOException: invalid constant type: 19 at 6. Seems to be a known javassist problem. See https://stackoverflow.com/questions/46132019/java-io-ioexception-invalid-constant-type-19-at-5